--- a/Proyecto_tp/styles.css
+++ b/Proyecto_tp/styles.css
@@ -2,12 +2,12 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f9;
+    background-color: #83a93c;
     color: #333;
 }
 
 header {
-    background-color: #4CAF50;
+    background-color: #0e7411;
     color: white;
     padding: 10px 0;
     text-align: center;
@@ -22,7 +22,7 @@ section {
 }
 
 h2 {
-    color: #4CAF50;
+    color: #000000;
 }
 
 .sensor {
@@ -32,7 +32,7 @@ h2 {
 }
 
 .sensor div {
-    background-color: #e7e7e7;
+    background-color: #a6c470bb;
     padding: 10px;
     border-radius: 5px;
     width: 30%;
@@ -41,7 +41,7 @@ h2 {
 footer {
     text-align: center;
     padding: 10px 0;
-    background-color: #333;
+    background-color: rgb(78, 49, 14);
     color: white;
     position: fixed;
     width: 100%;
